[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CTlessPET"
version = "0.0.2"
authors = [
    { name="Claes Ladefoged", email="claes.noehr.ladefoged@regionh.dk" },
]
description = "CTlessPET for synthetic CT from NAC PET data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]

dependencies = [
    "torch >= 2.0.0",
    "numpy",
    "torchio",
    "onnxruntime-gpu",
    "pydicom",
    "dicom2nifti",
    "nibabel"
]

[project.urls]
Homepage = "https://github.com/depict-rh/CTlessPET"
Issues = "https://github.com/depict-rh/CTlessPET/issues"

[project.scripts]
CTlessPET = "CTlessPET.main:convert_NAC_to_sCT"

[tool.hatch.build.targets.sdist]
include = [
    "src/CTlessPET/*.py",
]
exclude = [
    "/models",
    "/artifacts",
    "/tests",
    "src/CTlessPET/__pycache__",
]